--- a/Lesson01-Favorite-Toys/T01.01-Exercise-CreateLayout/app/src/main/res/values/strings.xml
+++ b/Lesson01-Favorite-Toys/T01.01-Exercise-CreateLayout/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
   -->
 <resources>
     <string name="app_name">Project Setup</string>
+    <string name="not_text">Android Toys</string>
 </resources>
