--- a/Lesson04a-Starting-New-Activities/T04a.01-Exercise-AddNewActivity/app/src/main/res/values/strings.xml
+++ b/Lesson04a-Starting-New-Activities/T04a.01-Exercise-AddNewActivity/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
 -->
 <resources>
     <string name="app_name">Explicit Intent</string>
+    <string name="default_tv">This is the default text!</string>
 </resources>
