--- a/Lesson06-Visualizer-Preferences/T06.01-Exercise-SetupTheActivity/app/src/main/res/values/strings.xml
+++ b/Lesson06-Visualizer-Preferences/T06.01-Exercise-SetupTheActivity/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Visualize</string>
 
-    <!-- TODO (4) Add string for Settings -->
+    <!-- Completed (4) Add string for Settings -->
 
     <!-- - - - - - - - - - - - - - - -
           - Used by Preferences  -
