--- a/Lesson10-Hydration-Reminder/T10.02-Exercise-CreateNotification/app/src/main/res/values/strings.xml
+++ b/Lesson10-Hydration-Reminder/T10.02-Exercise-CreateNotification/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">"Hydration Reminder"</string>
+    <string name="app_name">"Get Water"</string>
 
     <!-- Strings for the MainActivity -->
     <string name="instructions">
@@ -22,5 +22,7 @@
 
     <string name="charging_reminder_notification_title">Device Charging - Where\'s that water?</string>
     <string name="charging_reminder_notification_body">There\'s never a better time to drink water than when you know your phone is charging. Drink up!</string>
+	<string name = "test_notification">Test Notification</string>
+    <string name = "main_notification_channel_name">Primary</string>
 
 </resources>
